Fixes the bug: on Safari in the login modal the email and psw entered are not displayed

--- a/src/app/components/authentication/login/login.component.scss
+++ b/src/app/components/authentication/login/login.component.scss
@@ -20,7 +20,7 @@
       font-size: 16px !important;
       margin-bottom: 10px;
       padding: 10px 8px !important;
-      line-height: 56px;
+      // line-height: 56px;
       background: #fff;
       border: 1px solid #d9d9d9 !important;
       border-top: 1px solid silver;
